force-app/main/default/objects/Google_Analytics__c/Google_Analytics__c.object-meta.xml
<CustomObject>
    <label>Google Analytics</label>
    <nameField>
        <displayFormat>GA-{000}</displayFormat>
        <label>Google Analytics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>