force-app/main/default/objects/Google_Analytics__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Google Analytics</relationshipLabel>
    <relationshipName>Google_Analytics</relationshipName>
    <type>Lookup</type>
</CustomField>