force-app/main/default/objects/Google_Analytics__c/fields/Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Page_Views__c</fullName>
    <label>Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>