force-app/main/default/objects/Google_Analytics__c/fields/Page_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Page_Visit_Date__c</fullName>
    <label>Page Visit Date</label>
    <type>Date</type>
</CustomField>